--- a/css/site-style.css
+++ b/css/site-style.css
@@ -1,196 +1,234 @@
+/*ES:Formato base para pagina - EN:Base format for the website*/
+/*#region*/
 * {
 	margin: 0;
 	padding: 0;
 	user-select: none;
+	box-sizing: border-box;
 }
 
+*::before, *::after {
+	box-sizing: border-box;
+}
+
+#welcome {
+	position: relative;
+	display: grid;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	height: 300px;
+}
+
+#construction {
+	background: repeating-linear-gradient(45deg, #000000 0, #000000 10%, #ffff00 10%, #ffff00 20%);
+	padding: 10px 100px;
+	font-size: 64px;
+	font-weight: bold;
+	color: #ffffff;
+	text-shadow: 2px 2px 1px #000000;
+}
+/*#endregion*/
+
+/*ES:Estilo general de la pagina - EN: General style of the website*/
 body {
 	background: #36454f;
 	font-family: 'JetBrains Mono';
 }
 
-#container {
+#main-container {
 	position: relative;
+	display: grid;
+	grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 	width: 1200px;
-	background: #ffffff;
-	border-left: solid 4px #4169e1bb;
-	border-right: solid 4px #4169e1bb;
+	height: auto;
 	margin: auto;
-	overflow-x: hidden;
+	border-left: solid 5px #ffffff88;
+	border-right: solid 5px #ffffff88;
 }
 
 #header {
 	position: relative;
-	background: url('../images/bg3.jpg') no-repeat;
-	background-position: 0% 60%;
-	background-size: 100%;
-	width: 1200px;
-	height: 150px;
+	background: url("../images/bg_01.jpg") center;
+	display: grid;
+	background-size: cover;
+	grid-template-rows: repeat(1, minmax(0, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+	width: 100%;
+	height: 120px;
 	z-index: 1;
 }
 
 #header::before {
+	position: absolute;
 	content: "";
-	position: absolute;
-	background: #ffffff77;
-	width: 1200px;
-	height: 150px;
+	background: #ffffff88;
+	width: 100%;
+	height: 100%;
 }
 
-.link {
+#left-header {
 	position: relative;
-	width: 50px;
-	height: 50px;
-	float: left;
-	z-index: 1;
+	height: 100%;
 }
 
-.link > ul {
-	list-style: none;
-}
-
-.links {
+.left-links {
 	position: relative;
-	display: block;
 	background: #ffffff;
-	width: 30px;
-	height: 30px;
-	padding: 10px;
-	transition: 300ms ease-in-out;
+	width: 40px;
+	height: 40px;
+	transition: 250ms;
 }
 
-.links > li > img {
-	width: 30px;
-	height: 30px;
+.left-links:hover {
+	width: 180px;
+	height: 40px;
+	background: #ffffff;
+	transition: 250ms;
 }
 
-.links::after {
+.link1::before, .link2::before, .link3::before {
 	position: absolute;
-	top: 14px;
-	left: 64px;
-	color: #36454f;
-	font-size: 18px;
-	font-weight: bold;
-	text-shadow: 1px 1px 1px #ffffff;
+	content: "";
+	background: #4169e1;
+	color: #ffffff;
+	text-shadow: 2px 2px 2px #000000;
+	width: 0;
+	height: 40px;
+	padding: 10px 0 10px 20px;
+	text-align: center;
 	transform: scale(0, 1);
 	transform-origin: 0% 0%;
-	transition: 200ms ease-in-out;
+	transition: 250ms ease-in-out;
 }
 
-.lnk1::after {
-	content: "Facebook";
-}
-
-.lnk2::after {
-	content: "Twitter";
-}
-
-.lnk3::after {
-	content: "Instagram";
-}
-
-.links:hover{
-	background: #4169e133;
-	width: 150px;
-	transition: 300ms ease-in-out;
-}
-
-.links:hover::after {
+.link1:hover::before, .link2:hover::before, .link3:hover::before {
+	position: absolute;
+	width: 180px;
 	transform: scale(1, 1);
-	transition: 300ms ease-in-out;
+	transition: 500ms ease-in-out;
 }
 
-#banner {
-	position: relative;
-	width: 1150px;
-	height: 150px;
-	float: right;
+.link1::before {
+	content: "freeCodeCamp";
 }
 
-#banner > ul {
+.link2::before {
+	content: "GitHub";
+}
+
+.link3::before {
+	content: "CodePen";
+}
+
+.left-links > a {
 	position: relative;
-	right: 10px;
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding: 5px;
+}
+
+.left-links > a > img {
+	position: relative;
+	display: block;
+	height: 100%;
+}
+
+#right-header {
+	position: relative;
+	display: flex;
+	flex-direction: row-reverse;
+	gap: 5px;
+	height: 100%;
 }
 
 #logo {
 	position: relative;
-	background: #ffffffbb url('../images/logo.png') center no-repeat;
-	background-size: 100%;
+	background: #ffffff url("../images/logo1.png");
+	background-size: cover;
 	width: 120px;
-	height: 120px;
-	float: right;
-	top: 15px;
-	right: 10px;
-	transition: 250ms ease-in-out;
-}
-
-#lnk-logo {
-	display: block;
-	width: 120px;
-	height: 120px;
+	height: 100%;
+	transition: 250ms;
 }
 
 #logo:hover {
-	background: #4169e1bb url('../images/logo2.png') center no-repeat;
-	background-size: 100%;
-	transition: 250ms ease-in-out;
+	background: #4169e1 url("../images/logo2.png");
+	background-size: cover;
+	transition: 250ms;
 }
 
-.options {
+#logo > a {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.right-links {
 	position: relative;
-	float: right;
+	background: #ffffff88;
 	width: 120px;
-	height: 100px;
-	top: 15px;
-	margin-right: 10px;
-	background: #ffffffbb;
-	word-break: break-all;
-	color: #36454f;
+}
+
+.right-links > a {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding-top: 5px;
 	text-align: center;
+	text-decoration: none;
 	font-weight: bold;
-	list-style-type: none;
-	padding: 10px 0;
-	transition: 250ms ease-in-out;
+	color: #36454f;
+	transition: 250ms;
+	z-index: 1;
 }
 
-.options:hover {
-	background: #4169e1bb;
+.right-links > a:hover {
+	position: absolute;
+	background: #4169e188;
 	color: #ffffff;
-	transition: 250ms ease-in-out;
+	transition: 250ms;
 }
 
-.options::before {
-	content: "";
+.right-links > a::before {
 	position: absolute;
 	background: #36454f;
-	width: 120px;
-	height: 120px;
-	top: 0;
+	content: "";
+	width: 100%;
+	height: 100%;
+	bottom: 0;
 	left: 0;
-	transform: scale(0, .05);
-	transform-origin: 0% 100%;
+	transform: scale(0, .1);
+	transform-origin: 100% 100%;
 	transition: 250ms ease-in-out;
+	z-index: -1;
 }
 
-.options:hover::before {
-	transform: scale(1, .05);
-	transform-origin: 0% 100%;
+.right-links > a:hover::before {
+	transform: scale(1, .1);
+	transform-origin: 100% 100%;
 	transition: 250ms ease-in-out;
 }
 
 #footer {
 	position: relative;
-	width: 1200px;
-	height: 150px;
+	display: grid;
+	grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+	grid-template-columns: repeat(5, minmax(0, 1fr));
 	background: #4169e1;
+	width: 100%;
+	height: 120px;
+	padding: 10px;
 }
 
-#copyr {
-	position: absolute;
-	color: #ffffff;
+#copyright {
+	position: relative;
+	grid-area: 5/5/6/6;
+	text-align: right;
 	font-size: 18px;
 	font-weight: bold;
-	padding: 10px 15px;
-	right: 0;
-	bottom: 0;
+	color: #ffffff;
+	padding: 12px;
 }
