--- a/css/site-style.css
+++ b/css/site-style.css
@@ -1,234 +1,331 @@
-/*ES:Formato base para pagina - EN:Base format for the website*/
+/*ES: Formato base para pagina - EN: Base format for the website*/
 /*#region*/
 * {
-	margin: 0;
-	padding: 0;
-	user-select: none;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  box-sizing: border-box;
 }
 
 *::before, *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #welcome {
-	position: relative;
-	display: grid;
-	justify-content: space-around;
-	align-items: center;
-	width: 100%;
-	height: 300px;
+  position: relative;
+  display: grid;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 300px;
 }
 
 #construction {
-	background: repeating-linear-gradient(45deg, #000000 0, #000000 10%, #ffff00 10%, #ffff00 20%);
-	padding: 10px 100px;
-	font-size: 64px;
-	font-weight: bold;
-	color: #ffffff;
-	text-shadow: 2px 2px 1px #000000;
+  background: repeating-linear-gradient(45deg, #000000 0, #000000 10%, #ffff00 10%, #ffff00 20%);
+  padding: 10px 100px;
+  font-size: 64px;
+  font-weight: bold;
+  color: #ffffff;
+  text-shadow: 2px 2px 1px #000000;
 }
 /*#endregion*/
 
-/*ES:Estilo general de la pagina - EN: General style of the website*/
+/*ES: Estilo general de la pagina - EN: General style of the website*/
 body {
-	background: #36454f;
-	font-family: 'JetBrains Mono';
+  background: #36454f;
+  font-family: 'JetBrains Mono';
 }
 
 #main-container {
-	position: relative;
-	display: grid;
-	grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
-	grid-template-columns: repeat(1, minmax(0, 1fr));
-	width: 1200px;
-	height: auto;
-	margin: auto;
-	border-left: solid 5px #ffffff88;
-	border-right: solid 5px #ffffff88;
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  width: 1200px;
+  height: auto;
+  margin: auto;
+  border-left: solid 5px #ffffff88;
+  border-right: solid 5px #ffffff88;
 }
 
 #header {
-	position: relative;
-	background: url("../images/bg_01.jpg") center;
-	display: grid;
-	background-size: cover;
-	grid-template-rows: repeat(1, minmax(0, 1fr));
-	grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-	width: 100%;
-	height: 120px;
-	z-index: 1;
+  position: relative;
+  display: grid;
+  background: #4169e1 url("../images/bg_01.jpg") center;
+  background-size: cover;
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  width: 100%;
+  height: 120px;
+  z-index: 1;
 }
 
 #header::before {
-	position: absolute;
-	content: "";
-	background: #ffffff88;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  content: "";
+  background: #ffffff88;
+  width: 100%;
+  height: 100%;
 }
 
 #left-header {
-	position: relative;
-	height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 .left-links {
-	position: relative;
-	background: #ffffff;
-	width: 40px;
-	height: 40px;
-	transition: 250ms;
+  position: relative;
+  background: #ffffff;
+  width: 40px;
+  height: 40px;
+  transition: 250ms;
 }
 
 .left-links:hover {
-	width: 180px;
-	height: 40px;
-	background: #ffffff;
-	transition: 250ms;
+  width: 180px;
+  height: 40px;
+  background: #ffffff;
+  transition: 250ms;
 }
 
 .link1::before, .link2::before, .link3::before {
-	position: absolute;
-	content: "";
-	background: #4169e1;
-	color: #ffffff;
-	text-shadow: 2px 2px 2px #000000;
-	width: 0;
-	height: 40px;
-	padding: 10px 0 10px 20px;
-	text-align: center;
-	transform: scale(0, 1);
-	transform-origin: 0% 0%;
-	transition: 250ms ease-in-out;
+  position: absolute;
+  content: "";
+  background: #4169e1;
+  color: #ffffff;
+  text-shadow: 2px 2px 2px #000000;
+  width: 0;
+  height: 40px;
+  padding: 10px 0 10px 20px;
+  text-align: center;
+  transform: scale(0, 1);
+  transform-origin: 0% 0%;
+  transition: 250ms ease-in-out;
 }
 
 .link1:hover::before, .link2:hover::before, .link3:hover::before {
-	position: absolute;
-	width: 180px;
-	transform: scale(1, 1);
-	transition: 500ms ease-in-out;
+  position: absolute;
+  width: 180px;
+  transform: scale(1, 1);
+  transition: 500ms ease-in-out;
 }
 
 .link1::before {
-	content: "freeCodeCamp";
+  content: "freeCodeCamp";
 }
 
 .link2::before {
-	content: "GitHub";
+  content: "GitHub";
 }
 
 .link3::before {
-	content: "CodePen";
+  content: "CodePen";
 }
 
 .left-links > a {
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100%;
-	padding: 5px;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
 }
 
 .left-links > a > img {
-	position: relative;
-	display: block;
-	height: 100%;
+  position: relative;
+  display: block;
+  height: 100%;
 }
 
 #right-header {
-	position: relative;
-	display: flex;
-	flex-direction: row-reverse;
-	gap: 5px;
-	height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 5px;
+  height: 100%;
 }
 
 #logo {
-	position: relative;
-	background: #ffffff url("../images/logo1.png");
-	background-size: cover;
-	width: 120px;
-	height: 100%;
-	transition: 250ms;
+  position: relative;
+  background: #ffffff url("../images/logo1.png");
+  background-size: cover;
+  width: 120px;
+  height: 100%;
+  transition: 250ms;
 }
 
 #logo:hover {
-	background: #4169e1 url("../images/logo2.png");
-	background-size: cover;
-	transition: 250ms;
+  background: #4169e1 url("../images/logo2.png");
+  background-size: cover;
+  transition: 250ms;
 }
 
 #logo > a {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .right-links {
-	position: relative;
-	background: #ffffff88;
-	width: 120px;
+  position: relative;
+  background: #ffffff88;
+  width: 120px;
 }
 
 .right-links > a {
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100%;
-	padding-top: 5px;
-	text-align: center;
-	text-decoration: none;
-	font-weight: bold;
-	color: #36454f;
-	transition: 250ms;
-	z-index: 1;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: #36454f;
+  transition: 250ms;
+  z-index: 1;
 }
 
 .right-links > a:hover {
-	position: absolute;
-	background: #4169e188;
-	color: #ffffff;
-	transition: 250ms;
+  position: absolute;
+  background: #4169e188;
+  color: #ffffff;
+  transition: 250ms;
 }
 
 .right-links > a::before {
-	position: absolute;
-	background: #36454f;
-	content: "";
-	width: 100%;
-	height: 100%;
-	bottom: 0;
-	left: 0;
-	transform: scale(0, .1);
-	transform-origin: 100% 100%;
-	transition: 250ms ease-in-out;
-	z-index: -1;
+  position: absolute;
+  background: #36454f;
+  content: "";
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  transform: scale(0, .1);
+  transform-origin: 100% 100%;
+  transition: 250ms ease-in-out;
+  z-index: -1;
 }
 
 .right-links > a:hover::before {
-	transform: scale(1, .1);
-	transform-origin: 100% 100%;
-	transition: 250ms ease-in-out;
+  transform: scale(1, .1);
+  transform-origin: 100% 100%;
+  transition: 250ms ease-in-out;
 }
 
 #footer {
-	position: relative;
-	display: grid;
-	grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
-	grid-template-columns: repeat(5, minmax(0, 1fr));
-	background: #4169e1;
-	width: 100%;
-	height: 120px;
-	padding: 10px;
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  background: #4169e1;
+  width: 100%;
+  height: 120px;
+  padding: 10px;
 }
 
 #copyright {
-	position: relative;
-	grid-area: 5/5/6/6;
-	text-align: right;
-	font-size: 18px;
-	font-weight: bold;
-	color: #ffffff;
-	padding: 12px;
+  position: relative;
+  grid-area: 5/5/6/6;
+  text-align: right;
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
+  padding: 12px;
+}
+
+/*ES: area de formato para tablets y moviles - EN: format area for tablets and smartphones*/
+@media screen and (max-width: 1200px) {
+  #main-container {
+    width: 90%;
+  }
+
+  #right-header {
+    display: grid;
+    grid-template-rows: repeat(3, minmax(0px, 1fr));
+    grid-template-columns: repeat(2, minmax(0px, 1fr));
+  }
+
+  #logo {
+    grid-area: 1/2/4/3;
+    width: 100%;
+    background-size: 120px;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  #logo:hover {
+    background-size: 120px;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .right-links {
+    width: 100%;
+  }
+
+  #construction {
+    font-size: 38px;
+    margin: 0 10px;
+    padding: 10px 40px;
+  }
+
+  #copyright {
+    grid-area: 5/3/6/6;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .left-links:hover {
+    width: 95%;
+  }
+
+  .left-links::before {
+    font-size: 12px;
+  }
+
+  .left-links:hover::before {
+    width: 100%;
+  }
+
+  #right-header {
+    display: grid;
+    grid-template-rows: repeat(3, minmax(0px, 1fr));
+    grid-template-columns: repeat(1, minmax(0px, 1fr));
+  }
+
+  #logo {
+    background: #ffffff url("../images/logo_text.png") center no-repeat;
+    background-size: 160px;
+    grid-area: 1/1/2/2;
+  }
+
+  #logo:hover {
+    background: #ffffff url("../images/logo_text2.png") center no-repeat;
+    background-size: 160px;
+  }
+
+  .right-links {
+    font-size: 12px;
+  }
+
+  #portfolio {
+    grid-area: 2/1/3/2
+  }
+
+  #services {
+    grid-area: 3/1/4/2
+  }
+
+  #construction {
+    font-size: 32px;
+    text-align: center;
+    margin: 0 10px;
+    padding: 10px 40px;
+  }
+
+  #copyright {
+    grid-area: 5/3/6/6;
+    font-size: 12px;
+  }
 }
