--- a/css/site-style.css
+++ b/css/site-style.css
@@ -26,7 +26,7 @@
 /*#region*/
 body {
   background: #36454f;
-  font-family: 'JetBrains Mono';
+  font-family: 'JetBrainsMono';
   font-size: 24px;
 }
 
@@ -385,14 +385,31 @@ body {
   padding: 10px;
 }
 
+#contacts {
+  position: relative;
+  grid-area: 1/1/3/5;
+  font-size: .8em;
+  padding: 10px;
+}
+
+#contacts > a {
+  padding: 0 10px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+#contacts > a:hover {
+  background: #36454f;
+}
+
 #copyright {
   position: relative;
-  grid-area: 3/5/4/6;
+  grid-area: 2/5/3/6;
   text-align: right;
   font-size: .7em;
   font-weight: bold;
   color: #ffffff;
-  padding: 12px 12px 0 0;
+  padding: 10px;
 }
 /*#endregion*/
 
@@ -428,6 +445,10 @@ body {
     width: 100%;
   }
 
+  #welcome-text {
+    font-size: .7em;
+  }
+
   #portfolio {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -435,16 +456,19 @@ body {
   #portfolio-title-zero {
     font-size: 1.5em;
     grid-column: 1/3;
+    font-size: 1.4em;
    }
 
   #portfolio-title-one {
    font-size: 1.5em;
    grid-column: 1/3;
+   font-size: 1.4em;
   }
 
   #portfolio-title-two {
     font-size: 1.5em;
     grid-column: 1/3;
+    font-size: 1.4em;
   }
 
   .portfolio {
@@ -464,8 +488,13 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  #contacts {
+    grid-area: 1/1/2/2;
+    font-size: .6em;
+  }
+
   #copyright {
-    grid-area: 2/2/3/3;
+    grid-area: 1/2/2/3;
     font-size: .6em;
   }
 }
@@ -504,6 +533,11 @@ body {
     font-size: .8em;
   }
 
+  #welcome-text {
+    font-size: .6em;
+    margin: 15px;
+  }
+
   #portfolio {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -511,16 +545,19 @@ body {
   #portfolio-title-zero {
     font-size: 1.5em;
     grid-column: 1/2;
+    font-size: 1.2em;
    }
 
   #portfolio-title-one {
    font-size: 1.5em;
    grid-column: 1/2;
+   font-size: 1.2em;
   }
 
   #portfolio-title-two {
     font-size: 1.5em;
     grid-column: 1/2;
+    font-size: 1.2em;
   }
 
   .portfolio {
@@ -540,8 +577,12 @@ body {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
+  #contacts {
+    grid-area: 1/1/2/2;
+  }
+
   #copyright {
-    grid-area: 3/1/4/2;
+    grid-area: 2/1/3/2;
     font-size: .5em;
   }
 }
