--- a/css/site-style.css
+++ b/css/site-style.css
@@ -385,23 +385,6 @@ body {
   padding: 10px;
 }
 
-#contacts {
-  position: relative;
-  grid-area: 1/1/3/5;
-  font-size: .8em;
-  padding: 10px;
-}
-
-#contacts > a {
-  padding: 0 10px;
-  text-decoration: none;
-  color: #ffffff;
-}
-
-#contacts > a:hover {
-  background: #36454f;
-}
-
 #copyright {
   position: relative;
   grid-area: 2/5/3/6;
@@ -439,6 +422,15 @@ body {
     background-size: 120px;
     background-position: center;
     background-repeat: no-repeat;
+  }
+
+  .left-links {
+    width: 180px;
+  }
+
+  .link1::before, .link2::before, .link3::before {
+    width: 180px;
+    transform: scale(1, 1);
   }
 
   .right-links {
@@ -500,10 +492,6 @@ body {
 }
 
 @media screen and (max-width: 550px) {
-  .left-links:hover {
-    width: 95%;
-  }
-
   .left-links::before {
     font-size: .9em;
   }
