--- a/css/site-style.css
+++ b/css/site-style.css
@@ -144,6 +144,7 @@ body {
   width: 120px;
   height: 100%;
   transition: 250ms ease-in-out;
+  overflow: hidden;
 }
 
 #logo:hover {
@@ -151,15 +152,15 @@ body {
   transition: 250ms ease-in-out;
 }
 
-#logo-img {
+#logo-img1 {
   position: relative;
   display: block;
-  width: 100%;
+  width: 120px;
   height: 100%;
   margin: auto;
 }
 
-#logo-img:hover {
+#logo-img1:hover {
   filter: drop-shadow(0 0 2px #ffffff);
 }
 
@@ -442,6 +443,10 @@ body {
     background-repeat: no-repeat;
   }
 
+  #logo-img2 {
+    display: none;
+  }
+
   .left-links {
     width: 180px;
   }
@@ -525,14 +530,24 @@ body {
   }
 
   #logo {
-    background: #ffffff url("../images/logo_text.png") center no-repeat;
-    background-size: 140px;
+    background: #ffffff;
     grid-area: 1/1/2/2;
   }
 
   #logo:hover {
-    background: #ffffff url("../images/logo_text2.png") center no-repeat;
-    background-size: 140px;
+    background: #ffffff;
+  }
+
+  #logo-img1 {
+    display: none;
+  }
+
+  #logo-img2 {
+    display: block;
+    width: 200px;
+    height: 100%;
+    margin: auto;
+    padding: 5px;
   }
 
   .right-links {
