--- a/css/site-style.css
+++ b/css/site-style.css
@@ -26,7 +26,7 @@
 /*#region*/
 body {
   background: #4169e1;
-  font-family: 'JetBrainsMono';
+  font-family: 'JetBrainsMono', 'Lucida Console';
   font-size: 24px;
 }
 
