Cambio a carga de fuentes en estilo

--- a/css/site-style.css
+++ b/css/site-style.css
@@ -18,7 +18,8 @@
        url("../fonts/JetBrainsMono-Regular.woff2") format("woff2"),
        url("../fonts/JetBrainsMono-Bold.eot") format("embedded-opentype"),
        url("../fonts/JetBrainsMono-Bold.woff") format("woff"),
-       url("../fonts/JetBrainsMono-Bold.woff2") format("woff2")
+       url("../fonts/JetBrainsMono-Bold.woff2") format("woff2");
+  font-display: swap;
 }
 /*#endregion*/
 
