--- a/css/site-style.css
+++ b/css/site-style.css
@@ -433,15 +433,6 @@ body {
   #logo {
     grid-area: 1/2/4/3;
     width: 100%;
-    background-size: 120px;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  #logo:hover {
-    background-size: 120px;
-    background-position: center;
-    background-repeat: no-repeat;
   }
 
   #logo-img2 {
@@ -461,6 +452,12 @@ body {
     width: 100%;
   }
 
+  .right-links > a {
+    position: absolute;
+    background: #4169e188;
+    color: #ffffff;
+  }
+
   #welcome-text {
     font-size: .7em;
   }
@@ -470,30 +467,44 @@ body {
   }
 
   #portfolio-title-zero {
-    font-size: 1.5em;
     grid-column: 1/3;
     font-size: 1.4em;
    }
 
   #portfolio-title-one {
-   font-size: 1.5em;
    grid-column: 1/3;
    font-size: 1.4em;
   }
 
   #portfolio-title-two {
-    font-size: 1.5em;
     grid-column: 1/3;
     font-size: 1.4em;
   }
 
   .portfolio {
-    position: relative;
-    grid-column: 1/3;
+    grid-column: 1/2;
     width: 90%;
     margin-bottom: 20px;
-    overflow: hidden;
-    transition: 250ms ease-in-out;
+  }
+
+  .portfolio:nth-child(5) {
+    grid-column: 2/3;
+  }
+
+  .portfolio:nth-child(9) {
+    grid-column: 2/3;
+  }
+
+  .portfolio:nth-child(11) {
+    grid-column: 2/3;
+  }
+
+  .portfolio:hover {
+    transform: none;
+  }
+
+  .portfolio > a:hover {
+    font-weight: normal;
   }
 
   .portfolio > a {
@@ -516,7 +527,12 @@ body {
 }
 
 @media screen and (max-width: 550px) {
+  .left-links {
+    width: 100%;
+  }
+
   .left-links::before {
+    width: 100%;
     font-size: .9em;
   }
 
@@ -525,7 +541,6 @@ body {
   }
 
   #right-header {
-    display: grid;
     grid-template-rows: repeat(3, minmax(0px, 1fr));
     grid-template-columns: repeat(1, minmax(0px, 1fr));
   }
@@ -545,8 +560,8 @@ body {
 
   #logo-img2 {
     display: block;
-    width: 200px;
-    height: 100%;
+    width: 150px;
+    height: 38px;
     margin: auto;
     padding: 5px;
   }
@@ -565,30 +580,35 @@ body {
   }
 
   #portfolio-title-zero {
-    font-size: 1.5em;
     grid-column: 1/2;
     font-size: 1.2em;
    }
 
   #portfolio-title-one {
-   font-size: 1.5em;
    grid-column: 1/2;
    font-size: 1.2em;
   }
 
   #portfolio-title-two {
-    font-size: 1.5em;
     grid-column: 1/2;
     font-size: 1.2em;
   }
 
   .portfolio {
-    position: relative;
     grid-column: 1/2;
     width: 80%;
-    margin-bottom: 20px;
-    overflow: hidden;
-    transition: 250ms ease-in-out;
+  }
+
+  .portfolio:nth-child(5) {
+    grid-column: 1/2;
+  }
+
+  .portfolio:nth-child(9) {
+    grid-column: 1/2;
+  }
+
+  .portfolio:nth-child(11) {
+    grid-column: 1/2;
   }
 
   .portfolio > a {
