--- a/css/site-style.css
+++ b/css/site-style.css
@@ -45,7 +45,7 @@ body {
 #header {
   position: relative;
   display: grid;
-  background: #4169e1 url("../images/bg_01.webp") center;
+  background: #4169e1 url("../images/bg_02.webp") center;
   background-size: cover;
   grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
   width: 100%;
@@ -90,7 +90,7 @@ body {
   text-shadow: 2px 2px 0 #36454f;
   width: 0;
   height: 40px;
-  padding: 10px 0 10px 20px;
+  padding: 10px 0 10px 40px;
   text-align: center;
   transform: scale(0, 1);
   transform-origin: 0% 0%;
@@ -246,6 +246,16 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, minmax(0px, 1fr));
+  grid-template-areas: "title-1 title-1 title-1"
+                       "client-1 . ."
+                       "button-1 button-1 button-1"
+                       "title-2 title-2 title-2"
+                       "personal-1 personal-2 ."
+                       "button-2 button-2 button-2"
+                       "title-3 title-3 title-3"
+                       "fcc-1 fcc-2 fcc-3"
+                       "fcc-4 . ."
+                       "button-3 button-3 button-3";
   justify-items: center;
   gap: 10px;
   width: 100%;
@@ -254,9 +264,8 @@ body {
   border-bottom: solid 5px #ffffff;
 }
 
-#portfolio-title-zero {
+#portfolio-title-one, #portfolio-title-two, #portfolio-title-three {
   position: relative;
-  grid-column: 1/4;
   color: #ffffff;
   width: 100%;
   padding-left: 20px;
@@ -265,7 +274,7 @@ body {
   z-index: 1;
 }
 
-#portfolio-title-zero::before {
+#portfolio-title-one::before, #portfolio-title-two::before, #portfolio-title-three::before {
   content: "";
   position: absolute;
   background: #ffffff;
@@ -275,52 +284,6 @@ body {
   bottom: 0px;
   z-index: -1;
   transition: 250ms ease-in-out;
-}
-
-#portfolio-title-one {
-  position: relative;
-  grid-column: 1/4;
-  color: #ffffff;
-  width: 100%;
-  padding-left: 20px;
-  margin-bottom: 20px;
-  overflow: hidden;
-  z-index: 1;
-}
-
-#portfolio-title-one::before {
-  content: "";
-  position: absolute;
-  background: #ffffff;
-  width: 10px;
-  height: 100%;
-  left: 0px;
-  bottom: 0px;
-  z-index: -1;
-  transition: 250ms ease-in-out;
-}
-
-#portfolio-title-two {
-  position: relative;
-  grid-column: 1/4;
-  color: #ffffff;
-  width: 100%;
-  padding-left: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  overflow: hidden;
-  z-index: 1;
-}
-
-#portfolio-title-two::before {
-  content: "";
-  position: absolute;
-  background: #ffffff;
-  width: 10px;
-  height: 100%;
-  left: 0px;
-  bottom: 0px;
-  z-index: -1;
 }
 
 .portfolio {
@@ -365,7 +328,6 @@ body {
 
 .portfolio-button {
   position: relative;
-  grid-column: 1/4;
   background: #4169e1;
   width: 40px;
   height: 40px;
@@ -416,216 +378,55 @@ body {
 }
 /*#endregion*/
 
-/*ES: area de formato para tablets y moviles - EN: format area for tablets and smartphones*/
-/*#region*/
-@media screen and (max-width: 1200px) {
-  #main-container {
-    width: 90%;
-  }
-
-  #right-header {
-    display: grid;
-    gap: 0;
-    grid-template-rows: repeat(3, minmax(0px, 1fr));
-    grid-template-columns: repeat(2, minmax(0px, 1fr));
-  }
-
-  #logo {
-    grid-area: 1/2/4/3;
-    width: 100%;
-  }
-
-  #logo-img2 {
-    display: none;
-  }
-
-  .left-links {
-    width: 180px;
-  }
-
-  .link1::before, .link2::before, .link3::before {
-    width: 180px;
-    transform: scale(1, 1);
-  }
-
-  .right-links {
-    width: 100%;
-  }
-
-  .right-links > a {
-    position: absolute;
-    background: #4169e188;
-    color: #ffffff;
-  }
-
-  #welcome-text {
-    font-size: .7em;
-  }
-
-  #portfolio {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  #portfolio-title-zero {
-    grid-column: 1/3;
-    font-size: 1.4em;
-   }
-
-  #portfolio-title-one {
-   grid-column: 1/3;
-   font-size: 1.4em;
-  }
-
-  #portfolio-title-two {
-    grid-column: 1/3;
-    font-size: 1.4em;
-  }
-
-  .portfolio {
-    grid-column: 1/2;
-    width: 90%;
-    margin-bottom: 20px;
-  }
-
-  .portfolio:nth-child(5) {
-    grid-column: 2/3;
-  }
-
-  .portfolio:nth-child(9) {
-    grid-column: 2/3;
-  }
-
-  .portfolio:nth-child(11) {
-    grid-column: 2/3;
-  }
-
-  .portfolio:hover {
-    transform: none;
-  }
-
-  .portfolio > a:hover {
-    font-weight: normal;
-  }
-
-  .portfolio > a {
-    font-size: .7em;
-  }
-
-  #footer {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  #contacts {
-    grid-area: 1/1/2/2;
-    font-size: .6em;
-  }
-
-  #copyright {
-    grid-area: 1/2/2/3;
-    font-size: .6em;
-  }
+/*ES: formato de area grilla - EN: grid area format*/
+#portfolio-title-one {
+  grid-area: title-1;
 }
 
-@media screen and (max-width: 550px) {
-  .left-links {
-    width: 100%;
-  }
-
-  .left-links::before {
-    width: 100%;
-    font-size: .9em;
-  }
-
-  .left-links:hover::before {
-    width: 100%;
-  }
-
-  #right-header {
-    grid-template-rows: repeat(3, minmax(0px, 1fr));
-    grid-template-columns: repeat(1, minmax(0px, 1fr));
-  }
-
-  #logo {
-    background: #ffffff;
-    grid-area: 1/1/2/2;
-  }
-
-  #logo:hover {
-    background: #ffffff;
-  }
-
-  #logo-img1 {
-    display: none;
-  }
-
-  #logo-img2 {
-    display: block;
-    width: 150px;
-    height: 38px;
-    margin: auto;
-    padding: 5px;
-  }
-
-  .right-links {
-    font-size: .8em;
-  }
-
-  #welcome-text {
-    font-size: .6em;
-    margin: 15px;
-  }
-
-  #portfolio {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  #portfolio-title-zero {
-    grid-column: 1/2;
-    font-size: 1.2em;
-   }
-
-  #portfolio-title-one {
-   grid-column: 1/2;
-   font-size: 1.2em;
-  }
-
-  #portfolio-title-two {
-    grid-column: 1/2;
-    font-size: 1.2em;
-  }
-
-  .portfolio {
-    grid-column: 1/2;
-    width: 80%;
-  }
-
-  .portfolio:nth-child(5) {
-    grid-column: 1/2;
-  }
-
-  .portfolio:nth-child(9) {
-    grid-column: 1/2;
-  }
-
-  .portfolio:nth-child(11) {
-    grid-column: 1/2;
-  }
-
-  .portfolio > a {
-    font-size: .6em;
-  }
-
-  #footer {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  #contacts {
-    grid-area: 1/1/2/2;
-  }
-
-  #copyright {
-    grid-area: 2/1/3/2;
-    font-size: .5em;
-  }
+.client-1 {
+  grid-area: client-1;
 }
-/*#endregion*/
+
+.button-1 {
+  grid-area: button-1;
+}
+
+#portfolio-title-two {
+  grid-area: title-2;
+}
+
+.personal-1 {
+  grid-area: personal-1;
+}
+
+.personal-2 {
+  grid-area: personal-2;
+}
+
+.button-2 {
+  grid-area: button-2;
+}
+
+#portfolio-title-three {
+  grid-area: title-3;
+}
+
+.fcc-1 {
+  grid-area: fcc-1;
+}
+
+.fcc-2 {
+  grid-area: fcc-2;
+}
+
+.fcc-3 {
+  grid-area: fcc-3;
+}
+
+.fcc-4 {
+  grid-area: fcc-4;
+}
+
+.button-3 {
+  grid-area: button-3;
+}
