--- a/css/site-style-mobile.css
+++ b/css/site-style-mobile.css
@@ -64,10 +64,15 @@
                          "fcc-2"
                          "fcc-3"
                          "fcc-4"
-                         "button-3";
+                         "button-3"
+                         "title-4"
+                         "mockup-1"
+                         "mockup-2"
+                         "mockup-3"
+                         "button-4";
   }
 
-  #portfolio-title-one, #portfolio-title-two, #portfolio-title-three {
+  #portfolio-title-one, #portfolio-title-two, #portfolio-title-three, #portfolio-title-four {
     font-size: 1.2em;
   }
 
