--- a/mockup_celebrity/css/style-mobile.css
+++ b/mockup_celebrity/css/style-mobile.css
@@ -37,29 +37,26 @@
   }
 
   #previous-button, #next-button {
-    padding: 0 10px;
-    width: 50px;
-    height: 300px;
+    width: 40px;
+    height: 50px;
+    padding: 5px 0;
   }
 
   #merchandise {
     grid-template-columns: repeat(1, minmax(0, 1fr));
     grid-template-areas: "merc-title"
-                         "merc01"
-                         "merc02"
-                         "merc03"
-                         "merc04"
-                         "merc05"
-                         "merc06"
-                         "merc07"
-                         "merc08"
-                         "merc09"
-                         "merc10"
-                         "merc11"
-                         "merc12"
-                         "merc13"
-                         "merc14"
-                         "merc15";
+                         "cds"
+                         "cd01"
+                         "cd02"
+                         "cd03"
+                         "cd04"
+                         "cd05"
+                         "apparel"
+                         "apparel01"
+                         "apparel02"
+                         "apparel03"
+                         "apparel04"
+                         "apparel05";
   }
 
   .merc-item {
