--- a/css/site-style-mobile.css
+++ b/css/site-style-mobile.css
@@ -38,6 +38,7 @@
     display: block;
     width: 150px;
     height: 38px;
+    object-fit: contain;
     margin: auto;
     padding: 5px;
   }
@@ -88,12 +89,37 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  #contacts {
+  #contact {
     grid-area: 1/1/2/2;
+  }
+
+  #contact-text {
+    font-size: .75em;
+    margin-bottom: 5px;
+  }
+
+  .contact-link {
+    width: 34px;
+    height: 34px;
+  }
+
+  .contact-link > a {
+    padding: 2px;
   }
 
   #copyright {
     grid-area: 2/1/3/2;
     font-size: .5em;
+
+  }
+
+  #copy-text {
+    right: 0;
+    bottom: 0;
+  }
+
+  #margin {
+    grid-column: 1/2;
+    height: 20px;
   }
 }
