--- a/css/site-style-tablet.css
+++ b/css/site-style-tablet.css
@@ -97,9 +97,22 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  #contacts {
+  #contact {
     grid-area: 1/1/2/2;
-    font-size: .6em;
+  }
+
+  #contact-text {
+    font-size: .75em;
+    margin-bottom: 5px;
+  }
+
+  .contact-link {
+    width: 45px;
+    height: 45px;
+  }
+
+  .contact-link > a {
+    padding: 5px;
   }
 
   #copyright {
