--- a/css/site-style.css
+++ b/css/site-style.css
@@ -365,18 +365,107 @@ body {
   grid-template-columns: repeat(5, minmax(0, 1fr));
   background: #36454f;
   width: 100%;
-  height: 120px;
   padding: 10px;
+}
+
+#contact {
+  grid-area: 1/1/2/4;
+}
+
+#contact-text {
+  position: relative;
+  color: #ffffff;
+  font-weight: bold;
+  padding-left: 15px;
+  margin-bottom: 10px;
+  z-index: 1;
+}
+
+#contact-text::before {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #ffffff;
+  z-index: -1;
+}
+
+.contact-link {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  transition: 250ms;
+  z-index: 1;
+}
+
+.contact-link > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+}
+
+.contact-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transform: scale(1, 0);
+  transform-origin: 0% 100%;
+  background: #4169e1;
+  transition: 250ms;
+  z-index: -1;
+}
+
+.contact-link:hover::before {
+  transform: scale(1, 1);
+  transition: 250ms;
+}
+
+.img-contact {
+  width: 100%;
+  height: 100%;
 }
 
 #copyright {
   position: relative;
-  grid-area: 2/5/3/6;
+  grid-area: 1/4/2/6;
   text-align: right;
   font-size: .7em;
   font-weight: bold;
   color: #ffffff;
   padding: 10px;
+}
+
+#copy-text {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding-right: 15px;
+  z-index: 1;
+}
+
+#copy-text::before {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background: #ffffff;
+  z-index: -1;
+}
+
+#margin {
+  position: relative;
+  grid-column: 1/6;
+  width: 100%;
+  height: 50px;
 }
 /*#endregion*/
 
@@ -444,7 +533,6 @@ body {
 .mockup-3 {
   grid-area: mockup-3;
 }
-
 
 .button-4 {
   grid-area: button-4;
