--- a/mockup_landing/css/style.css
+++ b/mockup_landing/css/style.css
@@ -547,6 +547,14 @@ video {
   background-image: url('../images/goal.webp');
 }
 
+.bg-bottom {
+  background-position: bottom;
+}
+
+.bg-center {
+  background-position: center;
+}
+
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
@@ -659,11 +667,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .leading-8 {
   line-height: 2rem;
 }
@@ -681,11 +684,6 @@ video {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-}
-
-.mx-8 {
-  margin-left: 2rem;
-  margin-right: 2rem;
 }
 
 .-mx-10 {
@@ -717,6 +715,10 @@ video {
   margin-top: 3rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -737,11 +739,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .px-10 {
@@ -816,10 +813,6 @@ video {
   color: rgba(236, 72, 153, var(--tw-text-opacity));
 }
 
-.uppercase {
-  text-transform: uppercase;
-}
-
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -850,12 +843,20 @@ video {
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.skew-x-6 {
+  --tw-skew-x: 6deg;
+}
+
 .skew-x-12 {
   --tw-skew-x: 12deg;
 }
 
 .-skew-x-12 {
   --tw-skew-x: -12deg;
+}
+
+.-skew-x-6 {
+  --tw-skew-x: -6deg;
 }
 
 .duration-200 {
@@ -940,8 +941,8 @@ span {
     flex-direction: row;
   }
 
-  .md\:h-56 {
-    height: 14rem;
+  .md\:h-72 {
+    height: 18rem;
   }
 
   .md\:h-96 {
@@ -971,6 +972,10 @@ span {
     margin-top: 0px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:mr-10 {
     margin-right: 2.5rem;
   }
@@ -989,8 +994,8 @@ span {
     padding-right: 2.5rem;
   }
 
-  .md\:w-56 {
-    width: 14rem;
+  .md\:w-72 {
+    width: 18rem;
   }
 
   .md\:w-1\/2 {
